--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
   "homepage": "https://github.com/chiyx/cesuim_docker_demo#readme",
   "scripts": {
     "clean": "rimraf dist/",
-    "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css dist/",
-    "build": "yarn clean && tsc && yarn copy-files"
+    "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css src/**/*.js dist/",
+    "build": "yarn clean && mkdir dist && browserify src/app.ts -p [ tsify --noImplicitAny] > dist/app.js && yarn copy-files"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
+    "browserify": "^17.0.0",
     "copyfiles": "^2.4.1",
-    "rimraf": "^5.0.0"
+    "rimraf": "^5.0.0",
+    "tsify": "^5.0.4",
+    "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "jquery": "^3.6.4"
   }
 }
