add java project

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,17 @@ dist/
 .config.local.ts
 
 
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
 
